--- a/leaflet.html
+++ b/leaflet.html
@@ -91,23 +91,29 @@
   }
 
   /* Tombol chat melayang */
-  #chatButton {
+    #chatButton {
     position: fixed;
     bottom: 20px;
     right: 20px;
     background-color: #f9f9f9;
-    color: white;
     border: none;
     border-radius: 50%;
     width: 60px;
     height: 60px;
-    font-size: 28px;
+    font-size: 40px;           /* 🔹 Membesarkan emoji */
+    line-height: 60px;         /* 🔹 Pastikan emoji vertikalnya center */
+    text-align: center;        /* 🔹 Horizontal center */
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0,0,0,0.3);
     z-index: 9999;
+    padding: 0;                /* 🔹 Hilangkan padding default */
   }
+
   #chatButton:hover {
-    background-color: #e4e0e0;
+    background-color: #f3f1f1;
   }
 
   /* Iframe chat */
