--- a/leaflet.html
+++ b/leaflet.html
@@ -81,10 +81,10 @@
     font-size: 11px;
     padding: 4px 8px;                /* Tambah padding supaya teks tidak mepet */
     border-radius: 6px;
-    background: rgba(255, 255, 255, 0.95);
+    background: rgba(30, 30, 30, 0.7);
     border: 1px solid rgba(0, 0, 0, 0.2);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
-    color: #333;
+    color: #fbfbfb;
     white-space: nowrap;             /* Supaya teks tidak turun ke baris baru */
     line-height: 1.2em;               /* Tinggi baris pas */
     font-family: 'Segoe UI', sans-serif;
