--- a/leaflet.html
+++ b/leaflet.html
@@ -24,17 +24,17 @@
     .legend button:hover { background-color: #474646; }
 
     .leaflet-control-home {
-      background-color: white; border: none; border-radius: 4px;
+      background: rgba(30, 30, 30, 0.7); border: none; border-radius: 4px;
       box-shadow: 0 1px 5px rgba(0,0,0,0.65);
       width: 45px; height: 45px; line-height: 45px; text-align: center;
       cursor: pointer; font-size: 30px; font-weight: bold; color: #333; margin-top: 10px;
     }
-    .leaflet-control-home:hover { background-color: #f0f0f0; }
+    .leaflet-control-home:hover { background-color: #474646; }
 
     /* Switch button */
     .switch-control {
-      background: white; padding: 8px 12px; border-radius: 20px; display: flex; align-items: center;
-      gap: 8px; font-family: 'Segoe UI', sans-serif; font-size: 13px; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      background: rgba(30, 30, 30, 0.7); padding: 8px 12px; border-radius: 20px; display: flex; align-items: center;
+      gap: 8px; font-family: 'Segoe UI', sans-serif; font-size: 13px; color: #ffffff; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     .switch {
       position: relative; display: inline-block; width: 40px; height: 20px;
@@ -95,7 +95,7 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background-color: #f9f9f9;
+    background: rgba(30, 30, 30, 0.7);
     border: none;
     border-radius: 50%;
     width: 60px;
@@ -113,7 +113,7 @@
   }
 
   #chatButton:hover {
-    background-color: #f3f1f1;
+    background-color: #474646;
   }
 
   /* Iframe chat */
