--- a/leaflet.html
+++ b/leaflet.html
@@ -135,19 +135,35 @@
   }
   
   #chatContainer.show {
-    display: block;
-    opacity: 1;
-    transform: translateY(0);
+    display: block; opacity: 1; transform: translateY(0);
   }
   #chatContainer.hide {
-    opacity: 0;
-    transform: translateY(20px);
+    opacity: 0; transform: translateY(20px);
   }
   #chatContainer iframe {
-    width: 100%;
-    height: 100%;
-    border: none;
+    width: 100%; height: 100%; border: none;
   }
+
+  /* Tombol Zoom (+ dan -) */
+  .leaflet-control-zoom a {
+    background-color: rgba(30, 30, 30, 0.7) !important; color: #fff !important; border: none !important;
+  }
+  .leaflet-control-zoom a:hover {
+    background-color: #474646 !important;
+  }
+  /* Tombol Layer (kotak pojok kanan atas) */
+  .leaflet-control-layers {
+    background-color: rgba(30, 30, 30, 0.7) !important; border-radius: 6px !important; border: none !important;
+  }
+  .leaflet-control-layers:hover {
+    background-color: #474646 !important;
+  }
+
+  /* Untuk teks di dalam layer switcher */
+  .leaflet-control-layers-list {
+    color: #fff;
+  }
+
 </style>
 
 <!-- Tombol chat -->
