--- a/leaflet.html
+++ b/leaflet.html
@@ -16,11 +16,11 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.15); font-family: 'Segoe UI', sans-serif;
       min-width: 160px;
     }
-    .legend-title { font-weight: bold; margin-bottom: 10px; font-size: 15px; color: #ffffff; }
+    .legend-title { font-weight: bold; margin-bottom: 10px; font-size: 12px; color: #ffffff; }
     .legend button {
       width: 100%; padding: 8px 10px; margin-bottom: 6px; background-color: rgba(29, 28, 28, 0.7);
       border: none; border-radius: 6px; cursor: pointer; text-align: left;
-      font-size: 13px; color: #ffffff; display: flex; align-items: center; gap: 6px;
+      font-size: 11px; color: #ffffff; display: flex; align-items: center; gap: 6px;
     }
     .legend button:hover { background-color: #474646; }
 
@@ -40,7 +40,7 @@
     /* Switch button */
     .switch-control {
       background: rgba(30, 30, 30, 0.7); padding: 8px 12px; border-radius: 20px; display: flex; align-items: center;
-      gap: 8px; font-family: 'Segoe UI', sans-serif; font-size: 13px; color: #ffffff; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+      gap: 8px; font-family: 'Segoe UI', sans-serif; font-weight: bold; font-size: 12px; color: #ffffff; box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
     .switch {
       position: relative; display: inline-block; width: 40px; height: 20px;
@@ -60,10 +60,10 @@
     /* Label besar */
     .custom-label {
       background: rgba(30, 30, 30, 0.7); padding: 12px 16px; border-radius: 12px;
-      color: #fff; font-family: 'Segoe UI', sans-serif; font-size: 13px;
+      color: #fff; font-family: 'Segoe UI', sans-serif; font-size: 11px;
       box-shadow: 0 6px 12px rgba(0, 0, 0, 0.35);
       border: 1px solid rgba(255, 255, 255, 0.15); backdrop-filter: blur(4px);
-      min-width: 170px; position: relative; z-index: 1;
+      min-width: 140px; position: relative; z-index: 1;
       transition: all 0.25s ease; /* Smooth animasi hover */
     }
     .custom-label.hovered {
@@ -73,7 +73,7 @@
       z-index: 1000;
     }
     .custom-label .device-id {
-      font-weight: bold; font-size: 14px; margin-bottom: 8px; color: #ffffff;
+      font-weight: bold; font-size: 12px; margin-bottom: 8px; color: #ffffff;
     }
     .custom-label .info-row { display: flex; justify-content: space-between; margin-bottom: 4px; }
     .custom-label .info-row:last-child { margin-bottom: 0; }
@@ -371,7 +371,7 @@
   const legend = L.control({position:'bottomleft'});
   legend.onAdd = function(map){
     const div = L.DomUtil.create('div','legend');
-    div.innerHTML = `<div class="legend-title">Choose Location:</div>`;
+    div.innerHTML = `<div class="legend-title">CHOOSE LOCATION:</div>`;
     // 🔹 buat container isi (supaya bisa diupdate berkala)
     div.innerHTML += `<div id="legendContent"></div>`;
     return div;
