--- a/leaflet.html
+++ b/leaflet.html
@@ -453,7 +453,7 @@
     <div style="color:white"><span style="color:gold;">🟡</span> Medium flow: &lt; 50 l/s</div>
     <div style="color:white"><span style="color:limegreen;">🟢</span> High flow: &lt; 100 l/s</div>
     <div style="color:white"><span style="color:deepskyblue;">🔵</span> Very high flow: ≥ 200 l/s</div>
-    <div style="color:white"><span style="color:red;">🔴</span> Red blinking: Offline</div>
+    <div style="color:white"><span style="color:red;">🔴</span> Red blinking: Device offline</div>
   `;
   return div;
 };
