--- a/leaflet.html
+++ b/leaflet.html
@@ -258,6 +258,7 @@
     50%     { background: darkred; }
   }
   .legend.flowrate {
+    background: rgba(30, 30, 30, 0.7);
     width: 75%;
     font-size: 11px;   /* 🔹 perkecil teks legend flowrate */
     line-height: 1.3em; /* 🔹 rapatkan jarak antar baris */
