--- a/leaflet.html
+++ b/leaflet.html
@@ -267,7 +267,7 @@
   /* Style saat aktif */
   .leaflet-control-layers-base input:checked + span {
     font-weight: bold;
-    color: #4CAF50;
+    color: #2ecc46;
   }
 
   /* Batasi tinggi legend content agar hanya 10 tombol terlihat */
